# Tensr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.py  mkdocs.yml  pyproject.toml  vcpkg.json  xmake.lua
.github/workflows/: docs.yml  release.yml  test.yml
docs/: contributing.md  index.md  license.md
docs/api/: arithmetic.md  c-api.md  cpp-api.md  creation.md  io.md  linalg.md  random.md  reduction.md  shape.md
docs/examples/: advanced.md  basic.md  gpu.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/gpu/: cuda.md  devices.md  performance.md
examples/: basic_usage.c  cpp_usage.cpp
include/tensr/: tensr.h  tensr.hpp  tensr_array.h
src/backend/: device.c
src/backend/cuda/: cuda_ops.cu
src/core/: array.c  tensor.c  tensor.cpp
src/fft/: fft.c
src/io/: io.c
src/linalg/: linalg.c
src/ops/: arithmetic.c  reduction.c
src/random/: random.c
tests/: test_tensor.c
