[project]
name = "tensr"
version = "0.0.0"
description = "A tensor library for machine learning and scientific computing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "conan>=2.21.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "ruff>=0.14.1",
]
